[tool.poetry]
name = "c4"
version = "0.1.0"
description = ""
authors = ["Gary Anderson <gary.anders@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "c4"
]